--- a/app/views/polls/_form.html.erb
+++ b/app/views/polls/_form.html.erb
@@ -1,27 +1,5 @@
-<%= form_with(model: poll) do |form| %>
-  <% if poll.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(poll.errors.count, "error") %> prohibited this poll from being saved:</h2>
-
-      <ul>
-        <% poll.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
+<%= simple_form_for @poll do |f| %>
+  <%= f.input :title, label: "Title of poll:" %>
+  <%= f.hidden_field :user_id, :value => current_user.id %>
+  <%= f.button :submit, value: "Submit poll", class: "btn btn-primary" %>
 <% end %>
