--- a/app/views/polls/index.html.erb
+++ b/app/views/polls/index.html.erb
@@ -1,5 +1,3 @@
-<p style="color: green"><%= notice %></p>
-
 <h1>Polls</h1>
 
 <div id="polls">
@@ -9,6 +7,7 @@
       <%= link_to "Show this poll", poll %>
     </p>
   <% end %>
+  <%= will_paginate %>
 </div>
 
 <%= link_to "New poll", new_poll_path %>
