--- a/app/views/polls/_form.html.erb
+++ b/app/views/polls/_form.html.erb
@@ -1,9 +1,9 @@
 <%= simple_form_for :poll, url: polls_path do |poll| %>
-  <%= poll.input :title, label: "Title of poll:", placeholder: "Are you right handed?", required: true %>
+  <%= poll.input :title, label: "Title of poll:", placeholder: "Are you right handed?", autofocus: true, required: true %>
   <%= poll.simple_fields_for :choices do |choice| %>
     <%= choice.input nil, label: "Enter a poll choice:", placeholder: "True", required: true %>
     <%= choice.input nil, label: "Enter a poll choice:", placeholder: "False", required: true %>
   <% end %>
   <%= poll.hidden_field :user_id, :value => current_user.id %>
-  <%= poll.button :submit, value: "Submit poll", class: "btn btn-primary" %>
+  <%= poll.button :submit, value: "Submit poll", class: "btn btn-primary mt-2" %>
 <% end %>
