--- a/app/views/polls/_poll.html.erb
+++ b/app/views/polls/_poll.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id poll %>">
   <div>
-    <p><strong>User: </strong><%= poll.user_id %></p>
+    <p><strong>User: </strong><%= poll.user.email %></p>
     <p><strong>Title: </strong><%= poll.title %></p>
     <% poll.poll_choices.each do |choice| %>
       <p class="pl-2">- <%= choice.content %></p>
