--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('montserrat-regular.ttf');
+  src: url('<%= asset_path('montserrat-regular.tff' %>');
 }
 
 .jumbotron {
