--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <section id="site-nav" class="site-header text-center">
     <div class="container">
       <div class="row">
-        <p class="site-title">URPOLLS</p>
+        <p><%= link_to "URPOLLS", root_url, class: "site-title" %></p>
         <p class="site-description">See What Others Are Thinking</p>
       </div>
     </div>
