--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <div class="container">
+    <div class="container p-3">
       <% flash.each do |message_type, message| %>
         <% if message_type == "notice" %>
           <%= content_tag( :div, message, class: "alert alert-success") %>
