--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,14 +1,18 @@
 .site-title {
-  color: #d10014;
+  color: var(--primary-color);
   text-transform: uppercase;
   font-weight: 700;
   font-size: 2.3em;
   font-family: "Poppins", sans-serif;
+  text-decoration: none;
+}
 
+.site-title:hover {
+  color: var(--secondary-color);
 }
 
 .site-description {
-  color: #404040;
+  color: var(--secondary-color);
   margin: 0;
 }
 
@@ -17,14 +21,14 @@
 }
 
 .site-header {
-  background-color: #fff;
+  background-color: var(--background-color);
   padding-top: 30px;
   padding-bottom: 30px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid var(--line-separator-color);
 }
 
 .site-header-bottom {
-  border-color: #d10014;
+  border-color: var(--primary-color);
   border-width: 0 0 3px;
   border-style: solid;
   padding: 15px 0;
@@ -33,7 +37,7 @@
 .navigation-bar {
   display: block;
   width: 100%;
-  
+
   ul {
     list-style: none;
     text-transform: capitalize;
@@ -45,13 +49,13 @@
   }
 
   a {
-    color: #141413;
+    color: var(--secondary-color);
     text-decoration: none;
     background-color: transparent;
   }
-  
+
   a:hover {
-    color: #d10014;
+    color: var(--primary-color);
   }
 }
 
