Update user show page to display all poll choices

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
             <li id="nav-signin" class="menu-item">
               <%= link_to "Sign in", new_user_session_path %>
             </li>
-            <li id="nav-signin" class="menu-item">
+            <li id="nav-signup" class="menu-item">
               <%= link_to "Sign up", new_user_registration_path %>
             </li>
           <% end %>
