--- a/app/views/polls/show.html.erb
+++ b/app/views/polls/show.html.erb
@@ -2,7 +2,7 @@
 
 <div>
   <% if user_signed_in? and @poll.user_id == current_user.id %>
-    <%= link_to "Edit this poll", edit_user_poll_path(current_user.id, @poll) %> | <%= button_to "Destroy this poll", @poll, method: :delete %>
+    <%= link_to "Edit this poll", edit_user_poll_path(current_user.id, @poll) %> | <%= button_to "Destroy this poll", user_poll_path(@poll), method: :delete %>
   <% end %>
   <%= link_to "Back to polls", polls_path %>
 
