--- a/app/views/polls/new.html.erb
+++ b/app/views/polls/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New poll</h1>
+<div class="new-poll-form">
+  <h1 class="text-center page-title">Create New Poll</h1>
 
-<%= render "form", poll: @poll %>
+  <%= render "create_poll_form", poll: @poll %>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Back to polls", polls_path %>
+  <div>
+    <%= link_to "Back to polls", polls_path %>
+  </div>
 </div>
