--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,10 @@
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
-      <%= debug( params ) if Rails.env.development? %>
+      <% if Rails.env.development? %>
+        <%= debug( params ) %>
+        <br>
+      <% end %>
     </div>
   </body>
 </html>
