--- a/app/views/polls/index.html.erb
+++ b/app/views/polls/index.html.erb
@@ -1,5 +1,9 @@
 <h1 class="page-title text-center">Polls</h1>
 
+<% if user_signed_in? %>
+  <%= link_to "New poll", new_user_poll_path(current_user.id), class: "btn btn-primary mb-2" %>
+<% end %>
+
 <div id="polls">
   <% @polls.each do |poll| %>
     <%= render poll %>
@@ -10,6 +14,4 @@
   <%= will_paginate @polls %>
 </div>
 
-<% if user_signed_in? %>
-  <%= link_to "New poll", new_user_poll_path(current_user.id) %>
-<% end %>
+
