Fix style not showing up if logged out

--- a/app/views/polls/_poll.html.erb
+++ b/app/views/polls/_poll.html.erb
@@ -33,7 +33,7 @@
         <% else %>
           <%= 
             link_to choice.content, new_user_session_path, 
-              class: "btn-hollow rounded shadow-sm poll_choice_button" 
+              class: "btn-hollow rounded shadow-sm poll-choice-button border-soft" 
             %>
         <% end %>
       <% end %>
