Fix wrong text color and text decorations showing

--- a/app/assets/stylesheets/polls.scss
+++ b/app/assets/stylesheets/polls.scss
@@ -27,6 +27,8 @@
   margin-left: 0rem;
   width: 100%;
   text-align: start;
+  text-decoration: none;
+  color: var(--secondary-color);
 }
 
 .poll-choices-table {
